# mthesis-code

./: .gitignore  Makefile  README.md  env.yml  pyproject.toml
nsdata/: config_placeholder.json  full_overview.md  overview.md
nsdata/filter-mappings/: udel-filtered.csv  udel.csv
nsdata/hq-mappings/: INSTNR.json
nsdata/other-dst/: Dansk_Branchekode_DB07_v3_2014.csv  README.txt  disced_audd.csv  disced_udd.csv  disco.csv  psykkoder.txt  uddannelsesregistret.csv
nsdata/times-mappings/: AFG_ART.json  AUDD.json  BESKST13.json  SOCIO13.json  TILG_ART.json  UDD.json  UDEL.json
scripts/: construct_features.py  construct_neighbors.py  construct_network.py  construct_numpy_stuff.py  create_address.py  create_geotable.py  create_klasseid_table.py  create_reg_all.py  generate_testdata.py  log_tail.py
scripts/R/: fe_k30_all.R  fe_k30_defaultk_defaultk30-deciles.R  fe_k30_defaultk_defaultk30-quintiles.R  fe_k30_fullk_fullk30-deciles.R  fe_k30_fullk_fullk30-quintiles.R  fe_k50_all.R  fe_k50_all_all-deciles.R  fe_k50_all_all.R  fe_k50_all_all_deciles.R  fe_k50_all_deciles.R  fe_k50_defaultk_defaultk50-quintiles.R  fe_k50_fullk_full50-quintiles.R  fe_radius200_defaultradius_defaultradius200-deciles.R  fe_radius200_defaultradius_defaultradius200-quintiles.R  fe_radius400_defaultradius_defaultradius400-quintiles.R
scripts/dst/: collect_jobs.py  collect_kraf.py  collect_mappings.py
scripts/features/: k_agg.sh  k_features.sh  r_scripts.bat  radius_agg.sh  single_agg.sh  (+2 more)
tests/: __init__.py  cli_stuff.py  test_aggfeat.py  test_db.py  test_hq.py  test_outcome.py  test_times.py
(+82 files in other folders)
